# gemmbench

./: .gitignore  CMakeLists.txt  README.md
docs/: developer-guide.md
scripts/: build.sh  case-gen.sh  case-run.sh
src/: CMakeLists.txt  main.cpp
src/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.h  verify.cpp  verify.h
src/cli/: CMakeLists.txt  cli.cpp  cli.h
src/common/: dtype.h  matrix_buffer.h
src/ops/: CMakeLists.txt  README.md  gemm_op.h  naive_op.cpp  naive_op.h  openblas.cpp  openblas.h  registry.cpp  registry.h  zsc_gemm.cpp  zsc_gemm.h
src/output/: CMakeLists.txt  json_writer.cpp  json_writer.h
src/sample/: CMakeLists.txt  reference_gemm.cpp  reference_gemm.h  sample_generator.cpp  sample_generator.h  sample_io.cpp  sample_io.h
